const tests = require('./abstracted')
const client = require('../client/v1')
const test = require('ava')
const startGrpcServer = require('../server')
test.before(startGrpcServer)

const grpcTests = tests('grpc', client)
grpcTests.healthSubmission()
grpcTests.healthCheck()
grpcTests.walletBalances()
grpcTests.walletBalance()
grpcTests.walletInterest()
grpcTests.walletDeposit()
grpcTests.walletWithdraw()
grpcTests.transactionStatus()
grpcTests.getKYC()
grpcTests.submitKYC()
grpcTests.supportedCurrencies()
grpcTests.interestRates()
grpcTests.community()
grpcTests.institutionUsers()
grpcTests.institutionUser()
grpcTests.institutionWithdrawalAddress()
grpcTests.institutionMetadata()
